--- a/imagelibrary/build.gradle
+++ b/imagelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -34,4 +34,5 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.0.1"
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC"
 }
